feat(Role): Added role and routes to add or remove on user
