# app/Http/Controllers/API/UserController.php
@@ -5,7 +5,11 @@ namespace App\Http\Controllers\API;
 use Illuminate\Http\Request;
 use App\Http\Controllers\Controller;
 use App\User;
+use App\Models\Role\Role;
 use Illuminate\Support\Facades\Auth; 
+use Illuminate\Support\Facades\Log;
+use Illuminate\Database\Eloquent\ModelNotFoundException;
+
 use Validator;
 
 class UserController extends Controller
@@ -42,7 +46,7 @@ class UserController extends Controller
         
         if ($validator->fails()) { 
             return response()->json([
-                'status' => 'ERRO_VALIDACAO',
+                'status' => 'ERROR_VALIDATION',
                 'error'=>$validator->errors()
                 ], 422);            
         }
@@ -64,7 +68,57 @@ class UserController extends Controller
      * @return \Illuminate\Http\Response 
      */ 
     public function details() { 
-        $user = Auth::user(); 
+        $user = Auth::user()::with('roles')->get(); 
         return response()->json($user, $this-> successStatus); 
-    } 
+    }
+
+    public function addRoles(Request $request) {
+        try {
+            $user = new User($request->get('user'));
+            $user = User::with('roles')->findOrfail($user->id);
+            $roles = array();
+            foreach ($request->get('roles') as $role) {
+                $role = new Role($role);
+                $role = Role::findOrFail($role->id);
+                array_push($roles, $role->id);
+            };
+            $user->roles()->syncWithoutDetaching($roles);
+            $user = User::with('roles')->find($user->id);
+            return response()->json($user, $this-> successStatus); 
+        } catch (ModelNotFoundException $e) {
+            report($e);
+            $res['message'] = 'Not Found: ' . $e->getMessage();
+            $res['code'] = 404;
+            return response()->json($res, 404); 
+        }
+    }
+
+    public function removeRoles(Request $request) {
+        try {
+            $user = new User($request->get('user'));
+            $user = User::with('roles')->findOrfail($user->id);
+            
+            $roles = array();
+            foreach ($user->roles as $role ) {
+                array_push($roles, $role->id);
+            }
+            
+            $rolesToRemove = array();
+            foreach ($request->get('roles') as $role) {
+                $role = new Role($role);
+                $role = Role::findOrFail($role->id);
+                array_push($rolesToRemove, $role->id);
+            };
+            $roles = array_diff($roles, $rolesToRemove);
+            Log::debug($roles);
+            $user->roles()->sync($roles);
+            $user = User::with('roles')->find($user->id);
+            return response()->json($user, $this-> successStatus); 
+        } catch (ModelNotFoundException $e) {
+            report($e);
+            $res['message'] = 'Not Found: ' . $e->getMessage();
+            $res['code'] = 404;
+            return response()->json($res, 404); 
+        }
+    }
 }
