# app/Http/Controllers/API/UserControllerSWG.php
@@ -13,7 +13,7 @@ class UserControllerSWG extends Controller
 /**
  * @OA\Get(
  *      path="/users/me",
- *      operationId="getProjectsList",
+ *      operationId="getUsersList",
  *      tags={"User"},
  *      summary="Get logged user information",
  *      description="Returns user's iformotation",
@@ -33,5 +33,117 @@ class UserControllerSWG extends Controller
  * )
  *
  * Returns users information
+*/
+/**
+ * @OA\Post(
+ *      path="/users/roles",
+ *      operationId="addUserRoles",
+ *      tags={"User"},
+ *      summary="Add role to a user",
+ *      description="Returns user with roles",
+ *      @OA\RequestBody(
+ *        @OA\MediaType(
+ *          mediaType="application/json",
+ *          @OA\Schema(
+ *            @OA\Property(
+ *              property="user",
+ *              type="object",
+ *              @OA\Property(
+ *                  property="id",
+ *                  type="integer",
+ *                  example=1
+ *              ),
+ *             ),
+ *             @OA\Property(
+ *              property="roles",
+ *              type="array",
+ *               @OA\Items(
+ *                  type="object",
+ *                  @OA\Property(
+ *                      property="id",
+ *                      type="integer",
+ *                      example=1
+ *                  ),
+ *               ),
+ *             ),
+ *          )
+ *        ) 
+ *      ),
+ *      @OA\Response(
+ *          @OA\MediaType(mediaType="application/json"),
+ *          response=200,
+ *          description="successful operation"
+ *       ),
+ *       @OA\Response(response=400, description="Bad request"),
+ *       @OA\Response(
+ *          response=401, 
+ *          description="Unauthenticated"
+ *       ),
+ *       @OA\Response(
+ *          response=404, 
+ *          description="Not Found"
+ *       ),
+ *      security={
+ *         {"bearerAuth": {}}
+ *      }
+ * )
+ *
+ * Returns users information with roles
+*/
+/**
+ * @OA\Delete(
+ *      path="/users/roles",
+ *      operationId="removeUserRoles",
+ *      tags={"User"},
+ *      summary="Remove role from user",
+ *      description="Returns user with roles",
+ *      @OA\RequestBody(
+ *        @OA\MediaType(
+ *          mediaType="application/json",
+ *          @OA\Schema(
+ *            @OA\Property(
+ *              property="user",
+ *              type="object",
+ *              @OA\Property(
+ *                  property="id",
+ *                  type="integer",
+ *                  example=1
+ *              ),
+ *             ),
+ *             @OA\Property(
+ *              property="roles",
+ *              type="array",
+ *               @OA\Items(
+ *                  type="object",
+ *                  @OA\Property(
+ *                      property="id",
+ *                      type="integer",
+ *                      example=1
+ *                  ),
+ *               ),
+ *             ),
+ *          )
+ *        ) 
+ *      ),
+ *      @OA\Response(
+ *          @OA\MediaType(mediaType="application/json"),
+ *          response=200,
+ *          description="successful operation"
+ *       ),
+ *       @OA\Response(response=400, description="Bad request"),
+ *       @OA\Response(
+ *          response=401, 
+ *          description="Unauthenticated"
+ *       ),
+ *       @OA\Response(
+ *          response=404, 
+ *          description="Not Found"
+ *       ),
+ *      security={
+ *         {"bearerAuth": {}}
+ *      }
+ * )
+ *
+ * Returns users information with roles
 */
 }
